--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main>
      <article>
       <h2>VHS umami pop-up trust fund</h2>
-      <p>Marfa church-key kitsch bicycle rights, 8-bit mixtape cardigan gentrify Echo Park. Street art swag brunch, next level roof party Schlitz hella organic keffiyeh selfies. You probably haven't heard of them polaroid hashtag +1, meggings biodiesel Portland High Life cray tumblr retro.</p>
+      <p>To get something you never had, you must do something you never did.</p>
       <button>Like</button>
      </article>
       <article>
